--- a/u/productos/style.css
+++ b/u/productos/style.css
@@ -22,7 +22,7 @@ body {
 
     margin: 3rem;
     display: flex;
-    justify-content: space-around;
+    justify-content: space-evenly;
     align-content: center;
 
     flex-wrap: wrap;
@@ -69,7 +69,6 @@ body {
 
     .producto {
         width: 142px;
-        margin-right: 1rem;
     }
 
     .contenedor {
@@ -82,8 +81,16 @@ body {
         margin: 0;
     }
 
+    .producto:last-child {
+        margin: 1rem 0;
+    }
+
     .producto:not(:last-child) {
-        margin-right: 1rem;
+        margin: 1rem 0;
+    }
+
+    .producto .producto-foto span {
+        font-size: 1.5rem;
     }
 }
 
