--- a/u/productos/style.css
+++ b/u/productos/style.css
@@ -15,6 +15,8 @@ body {
 .contenedor {
     font-size: 2rem;
     background-color: rgb(235, 227, 227);
+    width: 80%;
+    margin: 0 auto;
 }
 
 .contenedor-productos {
@@ -51,7 +53,25 @@ body {
     height: 150px;
 }
 
+@media screen and (max-width: 1380px) {
+    .contenedor-productos {
+        padding: 0;
+        margin: 0;
+    }
+}
+
+@media screen and (max-width: 1200px) {
+    .contenedor {
+        width: 95%;
+    }
+}
+
 @media screen and (max-width: 1100px) {
+
+    .contenedor {
+        width: 100%;
+    }
+
     .contenedor-productos {
         padding: 0;
         margin: 0;
@@ -71,6 +91,12 @@ body {
 
     .producto {
         margin: 10px;
+    }
+}
+
+@media screen and (max-width: 769px) {
+    .productos {
+        width: 234px;
     }
 }
 
@@ -102,6 +128,7 @@ body {
     .contenedor-productos {
         padding: 0;
         margin: 0;
+        justify-content: center;
     }
 
     .producto .producto-foto span {
@@ -110,8 +137,9 @@ body {
 }
 
 @media screen and (max-width: 320px) {
+
     .producto {
-        margin: 0.5rem;
+        margin: 0.8rem;
         width: 140px;
     }
 }
@@ -176,10 +204,26 @@ button {
     padding: .7rem 1rem;
     margin-top: 1.2rem;
 
-    align-self: flex-end;
+    align-self: center;
 
     box-shadow: 0 1px 0px 1px rgba(0, 0, 0, 0.5);
 
     outline: none;
     cursor: pointer;
+}
+
+
+
+/* HEADER */
+
+.header {
+    background-color: rgb(141, 77, 141);
+    text-align: center;
+
+    padding: 3rem;
+    margin-bottom: 2rem;
+}
+
+.header h2 {
+    color: #fff;
 }
